Version 2.1.4, released ??

Renamed command-line arguments --{error,regression}-test-filename to
--{error,regression}-test-basename.


Version 2.1.3, released February 5, 2016

Renamed command-line argument --include-only-classes to
--include-if-classname-appears.  Clarified that a test is output only if
the test's source code textually uses some member from the classes.

New command-line argument --include-if-class-exercised causes Randoop to
output only tests that execute some method in the given classes, whether or
not the method appears in the source code of the test.

Changed command-line argument defaults to forbid-null=false and
--null-ratio=0.05.

Fixed a bug in which a primitive type would be selected as a receiver of a
method call.


Version 2.1.2, released January 26, 2016

Fixed issues related to filtering of classes and members so that Randoop ignores:
- public methods/constructors with package private parameter types, and
- synthetic constructor with anonymous parameter (generated for
  private constructor of outer class used by inner class).
Thanks to Rene Just and Gordon Fraser.


Version 2.1.1, released January 22, 2016

Randoop now prints nicer error information when it halts after encountering a
flaky test (a test in which an exception is thrown elsewhere than at the last
statement).  This flaky behavior is usually due to nondeterminism or to side
effects on global state.  So, the best solution is to not run Randoop on
methods that are nondeterministic or that side-effect global state.
Alternately, you can use the --ignore-flaky-tests option to make Randoop discard
flaky tests and proceed.

Randoop is now package-access-aware in determining which class members to
include in a test.  If --junit-package-name is set to the package of a
class under test, the tests will include non-private members of the
class. Restrict tests to only public members by setting
--only-test-public-members.
